--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -31,6 +31,7 @@
 
 .popup__container {
     width: 100%;
+    background: transparent;
 }
 
 .popup__title {
@@ -48,7 +49,7 @@
 }
 
 .popup__photo {
-    width: 80%;
+    width: 95%;
     height: 60vh;
 }
 
